--- a/src/components/AddNewItemForm/AddNewItemForm.module.css
+++ b/src/components/AddNewItemForm/AddNewItemForm.module.css
@@ -7,13 +7,13 @@
     align-items: flex-end;
 }
 
-.todoListForm input{
+.todoListForm .input {
     background: none;
-    outline: none;
-    border: 1px solid #ccc;
+    border: 1px solid #777;
+    height: 52%;
     padding: 8px;
     box-sizing: border-box;
-
+    outline: none;
 }
 
 .todoListForm input, .todoListForm button {
