--- a/src/components/TodoList/TodoList.module.css
+++ b/src/components/TodoList/TodoList.module.css
@@ -1,7 +1,8 @@
 .wrap{
-    width: 200px;
+    width: 250px;
     height: 200px;
     margin: 10px;
+    padding: 10px;
     border: 1px solid #777;
     border-radius: 5px;
 }
@@ -9,6 +10,7 @@
 .wrap:hover{
     background: rgba(155, 155, 155, 0.05);
 }
+
 
 .title{
     display: flex;
@@ -28,4 +30,9 @@
 
 .title i:hover{
     color: red;
+}
+
+.AddTaskFormWrap {
+    width: 100%;
+    height: 58px;
 }
