--- a/src/components/TodoList/TodoList.module.css
+++ b/src/components/TodoList/TodoList.module.css
@@ -1,6 +1,6 @@
 .wrap{
     width: 250px;
-    height: 200px;
+    min-height: 250px;
     margin: 10px;
     padding: 10px;
     border: 1px solid #777;
