--- a/src/components/TodoListTask/TodoListTask.module.css
+++ b/src/components/TodoListTask/TodoListTask.module.css
@@ -1,5 +1,11 @@
 .todoListTask{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.task{
+    display: flex;
     align-items: center;
 }
 
